prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/space_sep_field_name.nut
// EXPECT_ERROR: "Separate access operator"
let t = {a = 1}
let x = t. a
